# swagger/classic_api.go
@@ -8,24 +8,29 @@ import (
 	"github.com/swaggest/openapi-go/openapi3"
 
 	"github.com/TykTechnologies/tyk/apidef"
+	"github.com/TykTechnologies/tyk/gateway"
 )
 
 var ErrOperationExposer = errors.New("object is not of type openapi3.OperationExposer")
 
+const APIsTag = "APIs"
+
 func APIS(r *openapi3.Reflector) error {
-	return addOperations(r, getClassicApiRequest, deleteClassicApiRequest, putClassicApiRequest, getListOfClassicApisRequest, createClassicApiRequest)
+	return addOperations(r, getClassicApiRequest, deleteClassicApiRequest, putClassicApiRequest, getListOfClassicApisRequest, createClassicApiRequest, getApiVersions)
 }
 
+// Done
 func getClassicApiRequest(r *openapi3.Reflector) error {
 	oc, err := r.NewOperationContext(http.MethodGet, "/tyk/apis/{apiID}")
 	if err != nil {
 		return err
 	}
-	oc.AddReqStructure(new(apidef.APIDefinition))
-	oc.AddRespStructure(new(apidef.APIDefinition))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusNotFound))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusForbidden))
-	oc.SetTags("APIs")
+	oc.AddRespStructure(new(apidef.APIDefinition), func(cu *openapi.ContentUnit) {
+		cu.Description = "API definition"
+	})
+	statusNotFound(oc, "Api not found")
+	forbidden(oc)
+	oc.SetTags(APIsTag)
 	oc.SetID("getApi")
 	oc.SetSummary("Get API definition with ID")
 	oc.SetDescription("Get API definition\n        Only if used without the Tyk Dashboard")
@@ -34,40 +39,54 @@ func getClassicApiRequest(r *openapi3.Reflector) error {
 		return ErrOperationExposer
 	}
 	o3.Operation().WithParameters(apIIDParameter())
-
 	oc.SetDescription("Get API definition\n        Only if used without the Tyk Dashboard")
-	return r.AddOperation(oc)
+	err = r.AddOperation(oc)
+	if err != nil {
+		return err
+	}
+	addNewResponseHeader(o3, http.StatusOK, HeaderCr{
+		Key:         "x-tyk-base-api-id",
+		Description: "ID of the base API if the requested API is a version.",
+		Type:        openapi3.SchemaTypeString,
+	})
+	return nil
 }
 
+// Done
 func getListOfClassicApisRequest(r *openapi3.Reflector) error {
 	oc, err := r.NewOperationContext(http.MethodGet, "/tyk/apis")
 	if err != nil {
 		return err
 	}
-	oc.AddRespStructure(new([]apidef.APIDefinition))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusForbidden))
+	oc.AddRespStructure(new([]apidef.APIDefinition), func(cu *openapi.ContentUnit) {
+		cu.Description = "List of API definitions"
+	})
 	oc.SetID("listApis")
 	oc.SetDescription(" List APIs\n         Only if used without the Tyk Dashboard")
 	oc.SetSummary("Get list of apis")
-	oc.SetTags("APIs")
+	oc.SetTags(APIsTag)
+	forbidden(oc)
 	return r.AddOperation(oc)
 }
 
+// Done
 func putClassicApiRequest(r *openapi3.Reflector) error {
 	oc, err := r.NewOperationContext(http.MethodPut, "/tyk/apis/{apiID}")
 	if err != nil {
 		return err
 	}
 	oc.AddReqStructure(new(apidef.APIDefinition))
-	oc.AddRespStructure(new(apiModifyKeySuccess))
+	oc.AddRespStructure(new(apiModifyKeySuccess), func(cu *openapi.ContentUnit) {
+		cu.Description = "API updated"
+	})
 	oc.SetID("updateApi")
 	oc.SetSummary("Updating an API definition  with its ID")
 	oc.SetDescription("Updating an API definition uses the same signature an object as a `POST`, however it will first ensure that the API ID that is being updated is the same as the one in the object being `PUT`.\n\n\n        Updating will completely replace the file descriptor and will not change an API Definition that has already been loaded, the hot-reload endpoint will need to be called to push the new definition to live.")
-	oc.SetTags("APIs")
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusBadRequest))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusNotFound))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusInternalServerError))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusForbidden))
+	oc.SetTags(APIsTag)
+	statusNotFound(oc, "An Api with the specified ApiID was not found.")
+	statusBadRequest(oc, "Bad request.Sending a ApiID for an OAs api or apiID in path does not match the one in the body.")
+	statusInternalServerError(oc, "Unexpected error.")
+	forbidden(oc)
 	o3, ok := oc.(openapi3.OperationExposer)
 	if !ok {
 		return ErrOperationExposer
@@ -76,21 +95,22 @@ func putClassicApiRequest(r *openapi3.Reflector) error {
 	return r.AddOperation(oc)
 }
 
+// Done
 func deleteClassicApiRequest(r *openapi3.Reflector) error {
 	oc, err := r.NewOperationContext(http.MethodDelete, "/tyk/apis/{apiID}")
 	if err != nil {
 		return err
 	}
-	oc.AddReqStructure(new(apidef.APIDefinition))
-	oc.SetTags("APIs")
+	oc.SetTags(APIsTag)
 	oc.SetID("deleteApi")
 	oc.SetDescription("Deleting an API definition will remove the file from the file store, the API definition will NOT be unloaded, a separate reload request will need to be made to disable the API endpoint.")
 	oc.SetSummary("Deleting an API definition with ID")
-	oc.AddRespStructure(new(apiModifyKeySuccess))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusBadRequest))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusNotFound))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusInternalServerError))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusForbidden))
+	oc.AddRespStructure(new(apiModifyKeySuccess), func(cu *openapi.ContentUnit) {
+		cu.Description = "API deleted"
+	})
+	statusNotFound(oc, "An Api with the specified ApiID was not found.")
+	statusInternalServerError(oc, "Unexpected error.")
+	forbidden(oc)
 	o3, ok := oc.(openapi3.OperationExposer)
 	if !ok {
 		return ErrOperationExposer
@@ -99,20 +119,21 @@ func deleteClassicApiRequest(r *openapi3.Reflector) error {
 	return r.AddOperation(oc)
 }
 
+// Done
 func createClassicApiRequest(r *openapi3.Reflector) error {
 	oc, err := r.NewOperationContext(http.MethodPost, "/tyk/apis")
 	if err != nil {
 		return err
 	}
-	oc.SetTags("APIs")
+	oc.SetTags(APIsTag)
 	oc.SetID("createApi")
 	oc.SetDescription(" Create API\n         A single Tyk node can have its API Definitions queried, deleted and updated remotely. This functionality enables you to remotely update your Tyk definitions without having to manage the files manually.")
 	oc.SetSummary("Creat an API")
 	oc.AddReqStructure(new(apidef.APIDefinition))
 	oc.AddRespStructure(new(apiModifyKeySuccess), openapi.WithHTTPStatus(http.StatusOK))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusInternalServerError))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusForbidden))
-	oc.AddRespStructure(new(apiStatusMessage), openapi.WithHTTPStatus(http.StatusBadRequest))
+	statusInternalServerError(oc, "Unexpected error.")
+	forbidden(oc)
+	statusBadRequest(oc, "Returned when you send a malformed body or when the request body fails validation")
 	o3, ok := oc.(openapi3.OperationExposer)
 	if !ok {
 		return ErrOperationExposer
@@ -121,8 +142,32 @@ func createClassicApiRequest(r *openapi3.Reflector) error {
 	return r.AddOperation(oc)
 }
 
+// Done
+func getApiVersions(r *openapi3.Reflector) error {
+	oc, err := r.NewOperationContext(http.MethodGet, "/apis/{apiID}/versions")
+	if err != nil {
+		return err
+	}
+	o3, ok := oc.(openapi3.OperationExposer)
+	if !ok {
+		return ErrOperationExposer
+	}
+	oc.AddRespStructure(new(gateway.VersionMetas), func(cu *openapi.ContentUnit) {
+		cu.Description = "API version metas"
+	})
+	statusNotFound(oc, "API not found")
+	forbidden(oc)
+	oc.SetID("listApiVersions")
+	oc.SetTags(APIsTag)
+	oc.SetSummary("Listing versions of an API")
+	oc.SetDescription("Listing versions of an API")
+	o3.Operation().WithParameters(apIIDParameter(), searchTextQuery(), accessTypeQuery())
+	return r.AddOperation(oc)
+}
+
 func apIIDParameter() openapi3.ParameterOrRef {
-	return openapi3.Parameter{In: openapi3.ParameterInPath, Name: "apiID", Required: &isRequired, Schema: stringSchema()}.ToParameterOrRef()
+	var example interface{} = "keyless"
+	return openapi3.Parameter{Description: stringPointerValue("The API ID"), In: openapi3.ParameterInPath, Example: &example, Name: "apiID", Required: &isRequired, Schema: stringSchema()}.ToParameterOrRef()
 }
 
 func addApiPostQueryParam() []openapi3.ParameterOrRef {
@@ -137,4 +182,12 @@ func addApiPostQueryParam() []openapi3.ParameterOrRef {
 		openapi3.Parameter{In: openapi3.ParameterInQuery, Name: "new_version_name", Schema: stringSchema(), Description: &newVersionNameDesc}.ToParameterOrRef(),
 		openapi3.Parameter{In: openapi3.ParameterInQuery, Name: "set_default", Schema: boolSchema(), Description: &setVersionDesc}.ToParameterOrRef(),
 	}
+}
+
+func searchTextQuery() openapi3.ParameterOrRef {
+	return openapi3.Parameter{Description: stringPointerValue("Search for API version name"), In: openapi3.ParameterInQuery, Name: "searchText", Required: &isOptional, Schema: stringSchema()}.ToParameterOrRef()
+}
+
+func accessTypeQuery() openapi3.ParameterOrRef {
+	return openapi3.Parameter{Description: stringPointerValue("Filter for internal or external API versions"), In: openapi3.ParameterInQuery, Name: "accessType", Required: &isOptional, Schema: stringEnumSchema("internal", "external")}.ToParameterOrRef()
 }
